03_infrastructure/ingress/ingress/base/forward-auth-bouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forward-auth-bouncer
  labels:
    app.kubernetes.io/name: forward-auth-bouncer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: forward-auth-bouncer
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forward-auth-bouncer
    spec:
      serviceAccountName: forward-auth-bouncer
      containers:
        - name: forward-auth-bouncer
          image: registry.gitlab.com/felixz92/forward-auth-bouncer-go:v0.2.4
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: http
              path: /ping
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: http
              path: /ping
            periodSeconds: 10
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 40m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: forward-auth-bouncer
  labels:
    app.kubernetes.io/name: forward-auth-bouncer
spec:
  selector:
    app.kubernetes.io/name: forward-auth-bouncer
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
  type: ClusterIP
