03_infrastructure/ingress/ingress/base/ingressroute-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-tls
  annotations:
    dashboard.zippelf.com/scrape: "true"
    dashboard.zippelf.com/logo: "https://github.com/traefik/traefik/blob/master/docs/content/assets/img/traefik.logo.png?raw=true"
    dashboard.zippelf.com/display-name: "Traefik"
    dashboard.zippelf.com/docs: "https://docs.traefik.io/"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-dashboard-ingress
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-bouncer
spec:
  entryPoints:
    - web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-bouncer-tls
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-dashboard-ingress
